--- a/HLL Dashboard/package.json
+++ b/HLL Dashboard/package.json
@@ -10,9 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.1",
+    "@material-tailwind/react": "^2.1.8",
+    "apexcharts": "^3.45.2",
+    "chart.js": "^4.4.1",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.0"
+    "react-router-dom": "^6.22.0",
+    "tw-elements": "^1.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
